# ros2-vision-node-base

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml  ruff.toml
.github/workflows/: docker.yml  pre-commit.yml
cvnode_base/: __init__.py  cvnode_base.py  utils.py
cvnode_base/core/: __init__.py  cvnode_base.py  tensorrt_base.py
cvnode_base/helpers/: runtime_msg_type.py
cvnode_base/nodes/: mask_rcnn_detectron.py  mask_rcnn_onnx.py  mask_rcnn_tensorrt.py  requirements.txt  yolact_kenning.py  yolact_tensorrt.py
cvnode_base/runtimes/: runtime.py
cvnode_base/utils/: __init__.py  image.py  launch_helper.py  tensorrt_helper.py
examples/: demo-helper  manifest.xml
examples/config/: coco_inference.json  lindenthal_camera_traps_classes.csv  lindenthal_camera_traps_demo_inference.json  lindenthal_camera_traps_inference.json  yolact-tflite-coco.json  yolact-tvm-coco.json  yolact-tvm-lindenthal.json
examples/mask_rcnn/: Dockerfile  README.md  build-docker.sh  export-model.py  manifest.xml  mask_rcnn_detectron.py  mask_rcnn_detectron_launch.py  mask_rcnn_ros2_inference.json  mask_rcnn_torchscript_launch.py  run-docker.sh
examples/mask_rcnn/config/: coco_classes.csv  mask_rcnn_ros2_inference.json
examples/mask_rcnn/launch/: mask_rcnn_detectron_launch.py  mask_rcnn_detectron_no_gui_launch.py  mask_rcnn_onnx_launch.py  mask_rcnn_tensorrt_launch.py  mask_rcnn_torchscript_launch.py  mask_rcnn_torchscript_no_gui_launch.py
examples/yolact/: README.md  build-trt-engine.py
examples/yolact/config/: yolact_inference.json
examples/yolact/launch/: yolact_kenning_launch.py  yolact_tensorrt_launch.py
include/cvnode_base/: cvnode_base.hpp
include/cvnode_base/nodes/: mask_rcnn_torchscript.hpp
include/cvnode_base/utils/: utils.hpp
launch/: mask_rcnn_torchscript_launch.py
src/: cvnode_base.cpp
src/nodes/: mask_rcnn_torchscript.cpp
src/utils/: utils.cpp
